# bazel-cgo

./: .gitignore  README.md  WORKSPACE
cgo-puts/: BUILD.bazel  Makefile  go.mod  go.sum
cgorust/: BUILD.bazel  Makefile  callbacks.go  main.go
person-rs/: BUILD.bazel  Cargo.toml
person-rs/cargo/: BUILD.bazel
person-rs/src/: lib.rs
